src/components/AboutSection/AboutSection.module.scss
@use '../../sass/main.scss' as *;

.aboutSection {
	width: 100vw;
	background-color: $bg-light-color;
	color: $text-dark-color;
	padding-bottom: pxToRem(136px);
	padding-right: pxToRem(90px);
	@include flexbox(column);
	@include align-items(center);

	@include breakpoint('xl') {
		height: 100vh;
	}
	@include breakpoint('l') {
		padding-right: pxToRem(40px);
	}
	@include breakpoint('m') {
		padding-right: pxToRem(15px);
	}

	h2 {
		color: $text-darkgreen-color;
		.highlight {
			color: $text-highlight-color;
		}
	}

	.firstRow {
		height: 50%;
		width: 100%;
		@include flexbox;
		@include align-items(center);

		.firstRowLeft {
			width: 50%;
			margin-right: pxToRem(70px);

			.imgWrapper {
				margin-top: -2rem;
				@include underlay(underlayedImg, $portrait: true);
			}
		}

		.firstRowRight {
			width: 50%;
			@include flexbox(column);
			@include justify-content(space-between);

			h2 {
				margin-top: pxToRem(70px);
			}

			p {
				margin-top: pxToRem(34px);
				max-width: pxToRem(630px);
			}

			button {
				margin-top: pxToRem(51px);
			}
		}
	}

	.secondRow {
		width: 100%;
		height: 50%;
		max-width: 1100px;
		margin-top: pxToRem(140px);
		display: grid;
		justify-items: center;
		grid-template-columns: 1fr 1fr 1fr;
		row-gap: pxToRem(74px);
		column-gap: 10px;
	}
}

